<resources>
    <string name="app_name">FoodDeliveryApp</string>
    <string name="title_home">Меню</string>
    <string name="title_profile">Профиль</string>
    <string name="title_contacts">Контакты</string>
    <string name="title_cart">Корзина</string>
    <string name="in_cart">В корзину за %1$s р.</string>
    <string name="buy">Купить за %1$s руб</string>
    <string name="from_prise_currency">от %1$s р.</string>
    <string name="price_currency">%1$s р.</string>
    <string name="price_all_currency">%1$s руб.</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="product_price">Product price</string>
    <string name="product_description">Product description</string>
    <string name="user_name">User Name</string>
    <string name="discount_now">Ваша текущая скидка</string>
    <string name="advertising_str">Приобретайте больше вкусной еды и получайте скидку ещё больше!</string>
    <string name="error_required_field">Обязательное поле</string>
    <string name="need_authentication">Вам необходимо создать или войти в существующий аккаунт.</string>
    <string name="password_error">Пароль должен содержать хотя бы одну большую букву, одну маленькую букву и одну цифру.</string>
    <string name="data_error">Некорректная дата</string>
    <string name="number_error">Несуществующий номер телефона</string>
    <string name="SignUp">Регистрация</string>
    <string name="already_have_acc">Уже есть аккаунт?</string>
    <string name="profile_name">Логин</string>
    <string name="hint_profile_name">Имя Фамилия</string>
    <string name="profile_phone">Телефон</string>
    <string name="hint_profile_phone">+375 29 1234567</string>
    <string name="profile_password">Пароль</string>
    <string name="profile_date">Дата рождения</string>
    <string name="hint_profile_password">········</string>
    <string name="hint_profile_date">21.06.2000</string>
    <string name="done">готово</string>
    <string name="error_sing_up">Номер телефона уже занят</string>
    <string name="error_log_in">Неверный телефон или пароль</string>
    <string name="is_authentication">Вы успешно авторизированны</string>
    <string name="RUB">%1$s РУБ</string>
    <string name="profile">Профиль</string>
    <string name="navigate_to_cart">Перейти в корзину</string>
    <string name="LogIn">Вход</string>
    <string name="no_have_acc">Ещё нет аккаунта?</string>
    <string name="phone">Телефон</string>
    <string name="signup_auth">Создать аккаунт</string>
    <string name="login_auth">Войти в существующий аккаунт</string>
    <string name="search_hint">Введите имя продукта</string>
    <string name="cart">Корзина</string>
    <string name="buy_cart">Купить</string>
    <string name="from_discount">До скидки </string>
    <string name="amount_for_discount">Осталось </string>
    <string name="spend_user">Вы заказали на </string>
    <string name="max_discount">Максимальная скидка: 15%</string>
    <string name="percent">%</string>
    <string name="price_percent">%d%%</string>
    <string name="create_address">Улица: %1$s, Дом: %2$s, Кв %3$s.</string>
    <string name="please_add_new_address">Пожалуйста добавьте новый адрес</string>
    <string name="empty_cart">Ваша корзина пуста</string>
    <string name="go_to_menu">Перейти в меню</string>
    <string name="add_new_address">Добавить новый адрес</string>
    <string name="please_choose_address">Пожалуйста выберите адрес.</string>
    <string name="delivery">Доставка</string>
    <string name="notification_text">Ваш заказ будет у вас примерно через: %1$s мин</string>
    <string name="delivery_success">Ваш заказ доставлен</string>
    <string name="telegram_url">\@Fa1R4K</string>
    <string name="owner_phone_number">tel:+375257889249</string>
    <string name="telegram_name_copied">Имя пользователя скопировано</string>
    <string name="vk_link">https://vk.com/maxzv21</string>
    <string name="purchase_success">Заказ успешно оформлен</string>
    <string name="delivery_info">Информация о доставке будет в уведомлениях</string>
    <string name="new_address">Новый адрес</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="flat">Квартира</string>
    <string name="max_discount_int">15</string>
    <string name="retry">повторить</string>
    <string name="no_network_connection_massage">Не удалось получить доступ к интернету.</string>
    <string name="payment_by_card">Картой</string>
    <string name="payment_in_cash">Наличными</string>
    <string name="address">Адрес</string>
    <string name="payment_method">Способы оплаты</string>
    <string name="order_price">Стоимость заказа</string>
    <string name="place_order">Оформить заказ</string>
    <string name="currency">руб.</string>
    <string name="taking_account_discount">С учетом вашей скидки</string>
    <string name="restaurants_on_the_map">Рестораны на карте</string>
    <string name="connect_with_support">Связаться с поддержкой</string>
    <string name="app_version">Версия приложения 1.0</string>
    <string name="order_date">Дата заказа:</string>
    <string name="repeat_order">Повторить заказ</string>
    <string name="name_user">Имя пользователя</string>
    <string name="history_order">История заказов</string>
    <string name="delivery_addresses">Адреса доставки</string>
    <string name="user_addresses">Ваши адреса</string>
    <string name="registration_date">Дата регистрации</string>
    <string name="count">Количество:</string>
    <string name="full_price">Сумма</string>
    <string name="more_detailed">Подробнее</string>
</resources>