<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/line_markup"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_shopping_basket_24" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/product"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/ivProductImage"
        app:layout_constraintStart_toEndOf="@+id/ivProductImage"
        app:layout_constraintTop_toTopOf="@id/ivProductImage"
        app:layout_constraintVertical_bias="0.2" />


    <TextView
        android:id="@+id/tvParameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/product_description"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvProductName"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

    <View
        android:id="@+id/line_markup"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProductImage" />

    <TextView
        android:id="@+id/tvProductCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/count"
        android:textColor="@color/grey_400"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvProductCount"
        app:layout_constraintTop_toBottomOf="@+id/line_markup" />


    <TextView
        android:id="@+id/tvProductCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="@color/grey_400"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_markup" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/product_price"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/line_markup"
        app:layout_constraintTop_toBottomOf="@id/line_markup" />


</androidx.constraintlayout.widget.ConstraintLayout>